HHH-12190 - General tidying of Gradle scripts